k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    layer: frontend
spec:
    
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    
    
    metadata:
      labels:
        app: nginx
            
    spec:
    
      containers:
      
        - name: nginx
          image: ofiraviv/my-nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            
            - mountPath: /var/www/html/
              name: contents
                
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
                
      volumes:
        - name: contents
          hostPath:
            path: /var/website
            type: Directory
                
        - name: nginx-config
          configMap:
            name: nginx
---
kind: Service 
apiVersion: v1 
metadata:
  name: nginx
  labels:
    app: nginx
    layer: frontend
        
spec:

  type: NodePort
  selector:
    
    app: nginx

  ports:
   
    - nodePort: 30000
      port: 80
      targetPort: 80
